--- a/src/pages/landingpage/components/testimonial/Testimonial.scss
+++ b/src/pages/landingpage/components/testimonial/Testimonial.scss
@@ -1,8 +1,11 @@
 @import "../../../../utils/variables.scss";
 
 .TESTIMONIAL{
-    padding-top: 6em;
-    margin-top: -6em;
+    padding-top: 3em;
+    margin-top: -5em;
+    padding-left: 2rem;
+    padding-right: 2rem;
+
   .testimonial {
     border-color: $vividred;
     width: 2rem;
@@ -18,4 +21,29 @@
   .slick-next::before{
     color: black;
   }
+  .author {
+    font-size: 14px;
+  }
+  .testimonial-card {
+    width: auto!important;
+    min-height: 250px;
+    background-color: #2c5797;
+    color: whitesmoke;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    flex: 1 0 25%; /* Adjust the width as needed */
+  }
+  
+  .testimonial-content h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+  .testimonial-content p {
+    font-size: $regularSize;
+    margin-bottom: 0;
+    font-weight: $lightBold;
+  }
+
 }
