--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,49 +1,55 @@
 @import "../../utils/variables.scss";
-.footer-container {
-  background: #1e2350;;
-  color: $whiteSmoke;
-  border-top: 1px solid $pageBackground;
+.FOOTER{
+  li a{
+    color: white;
+  }
+  .footer-container {
+    background: #1e2350;;
+    color: $whiteSmoke;
+    border-top: 1px solid $pageBackground;
+  }
+  
+  .footer {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 1.5em;
+  }
+  
+  .footer-link {
+    color: $whiteSmoke;
+  }
+  
+  .footer-sublinks{
+    font-size: 12px;
+    color: $whiteSmoke;
+  }
+  
+  .footer-sublinks:hover{
+    color: #ff4020;
+  }
+  
+  .footer-link:hover {
+    color: #ff4020;
+  }
+  
+  .social-media-icons > * {
+    margin-right: 2rem;
+    color: $whiteSmoke
+  }
+  
+  .social-media-icons {
+    padding: 0.5rem;
+    text-align: center;
+  }
+  
+  .copyright {
+    font-size: x-small !important;
+  }
+  
+  .copyright1 {
+    font-size: small;
+    text-align: center;
+    padding: 0.5rem;
+  }
 }
 
-.footer {
-  display: flex;
-  justify-content: space-evenly;
-  padding: 1.5em;
-}
-
-.footer-link {
-  color: $whiteSmoke;
-}
-
-.footer-sublinks{
-  font-size: 12px;
-  color: $whiteSmoke;
-}
-
-.footer-sublinks:hover{
-  color: #ff4020;
-}
-
-.footer-link:hover {
-  color: #ff4020;
-}
-
-.social-media-icons > * {
-  margin-right: 2rem;
-  color: $whiteSmoke
-}
-
-.social-media-icons {
-  padding: 0.5rem;
-  text-align: center;
-}
-
-.copyright {
-  font-size: x-small !important;
-}
-
-.copyright1 {
-  font-size: small;
-  text-align: center;
-  padding: 0.5rem;
-}
