--- a/src/pages/landingpage/components/landingAboutUs/MiniAboutUs.scss
+++ b/src/pages/landingpage/components/landingAboutUs/MiniAboutUs.scss
@@ -1,34 +1,17 @@
 @import "../../../../utils/variables.scss";
-.ABOUTUS{
-    padding-top: 3em;
-    margin-top: -5em;
-    padding-left: 2rem;
-    padding-right: 2rem;
-.aboutUsImage {
-    height: 500px;
-    background-color: #ccc;
-    background: url(../../../../assets/images/AboutUs.svg);
-    background-size: cover;
-    background-position: center;
-}
+.MINIABOUTUS{
+
 .aboutUsHeading {
     text-align: center;
+}
+.text-decor {
+    text-decoration: none !important;
 }
 .about-us {
     width: 4rem;
     border-color: $vividred;
 }
-.know-more-button{
-    margin-top: 2rem;
-    border-radius: 8px !important;
-    color: $white !important;
-    font-weight: $lightBold !important;
-    border: 1px solid $red !important;
-    background-color: $red !important;
-  }
-.about-us-text{
-    padding-top: 4rem;
-}
+
 @media only screen and (max-width: 767px) {
     .aboutUsImage {
         height: 300px;
@@ -54,6 +37,7 @@ blockquote:before {
     line-height: 1;
     top: 0;
     left: 0;
+    color: #ff4020;
     content: "\201C";
 }
 blockquote:after {
@@ -63,6 +47,7 @@ blockquote:after {
     line-height: 0.75;
     right:0;
     bottom:-0.5em;
+    color: #ff4020;
     content: "\201D";
 }
 }
